<resources>
    <string name="app_name" translatable="false">Health Track</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="action_settings">Settings</string>
    <string name="WIP">Work in Progress</string>
    <string name="format_date">MM/dd/yyyy</string>
    <string name="format_time">HH:mm:ss</string>
    <string name="format_datetime">MM/dd/yyyy HH:mm:ss</string>
    <string name="format_int" translatable="false" formatted="true">%1$d</string>
    <string name="format_double" translatable="false" formatted="true">%1$.1f</string>
    <string name="menu_home">Home</string>
    <string name="menu_food">Food</string>
    <string name="menu_stepcounter">Steps</string>
    <string name="menu_weight">Weight</string>
    <string name="menu_bloodpressure">Blood Pressure</string>
    <string name="menu_bloodsugar">Blood Sugar</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_send_feedback">Send Feedback</string>
    <string name="fragment_feedback_header">Feedback about HealthTrack</string>
    <string name="fragment_feedback_content">Do you have questions, suggestions or need help? Write an email to
        healthtrack@dviererbe.de or open a GitHub Issue, and we will find a solution together. You can also search on
        our GitHub Issue Page for answers to similar problems of other users.
    </string>
    <string name="fragment_feedback_button_open_github_issues">Open Github Issues</string>
    <string name="fragment_feedback_button_send_email">Write an E-Mail</string>
    <string name="github_issues_link" translatable="false">https://github.com/dviererbe/HealthTrack/issues</string>
    <string name="feedback_email_address" translatable="false">healthtrack@dviererbe.de</string>
    <string name="intent_title_send_email">Send E-Mail&#8230;</string>
    <string name="title_activity_settings">Settings</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="kilogram_short">kg</string>
    <string name="pound_short">lb</string>
    <string name="kilopascal_short">kPa</string>
    <string name="millimetreofmercury_short">mmHg</string>
    <string name="beatsperminute_short">bpm</string>
    <string name="steps">Steps</string>
    <string name="medication_state_none">none</string>
    <string name="medication_state_taken">taken</string>
    <string name="medication_state_not_taken">not taken</string>
    <string name="weight_list_actions_create">Add</string>
    <string name="weight_list_actions_reset">Delete all</string>
    <string name="weight_list_notifications_delete_success">Deleted records successfully.</string>
    <string name="weight_list_notifications_delete_failure">Failed to delete records.</string>
    <string name="weight_list_dialog_delete_title">Delete weight records?</string>
    <string name="weight_list_dialog_delete_message">Should all weight records be deleted? This action can\'t be reversed.</string>
    <string name="weight_list_dialog_delete_confirm">Confirm</string>
    <string name="weight_list_dialog_delete_cancel">Cancel</string>
    <string name="weight_list_item_converted">(Converted)</string>
    <string name="weight_details_actions_edit">Edit</string>
    <string name="weight_details_actions_delete">Delete</string>
    <string name="weight_details_header">Details</string>
    <string name="weight_details_title_weight">Weight:</string>
    <string name="weight_details_title_created">Created:</string>
    <string name="weight_details_notifications_delete_failure">Failed to delete record due to an error.</string>
    <string name="weight_details_dialog_delete_title">Delete record?</string>
    <string name="weight_details_dialog_delete_message">Should the record be deleted? This action can\'t be reversed.</string>
    <string name="weight_details_dialog_delete_confirm">Confirm</string>
    <string name="weight_details_dialog_delete_cancel">Cancel</string>
    <string name="weight_merge_header_create">Add</string>
    <string name="weight_merge_header_update">Edit</string>
    <string name="weight_merge_title_Value">Weight</string>
    <string name="weight_merge_title_DateTime">Date &amp; Time</string>
    <string name="weight_merge_error_Value">The entered value is not a valid number.</string>
    <string name="weight_merge_button_now">Now</string>
    <string name="weight_merge_button_pick">Pick</string>
    <string name="weight_merge_button_create">Save</string>
    <string name="weight_merge_button_update">Update</string>
    <string name="weight_merge_information_loading_failed">Failed to load record.</string>
    <string name="weight_merge_notifications_creation_failed">Failed to create record.</string>
    <string name="weight_merge_notifications_update_failed">Failed to update record.</string>
    <string name="food_list_actions_create">Add</string>
    <string name="food_list_actions_reset">Delete all</string>
    <string name="steps_list_actions_create">Add</string>
    <string name="steps_list_actions_reset">Delete all</string>
    <string name="steps_list_actions_change_default_stepgoal">Change default Step Goal</string>
    <string name="steps_list_notifications_delete_success">Deleted records successfully.</string>
    <string name="steps_list_notifications_delete_failure">Failed to delete records.</string>
    <string name="steps_list_dialog_delete_title">Delete weight records?</string>
    <string name="steps_list_dialog_delete_message">Should all weight records be deleted? This action can\'t be reversed.</string>
    <string name="steps_list_dialog_delete_confirm">Confirm</string>
    <string name="steps_list_dialog_delete_cancel">Cancel</string>
    <string name="steps_details_actions_edit">Edit</string>
    <string name="steps_details_actions_delete">Delete</string>
    <string name="steps_details_header">Details</string>
    <string name="stepcount_details_title_step_count">Step Count</string>
    <string name="stepcount_details_title_goal">Goal</string>
    <string name="steps_details_title_created">Created</string>
    <string name="steps_details_notifications_delete_failure">Failed to delete record due to an error.</string>
    <string name="steps_details_dialog_delete_title">Delete record?</string>
    <string name="steps_details_dialog_delete_message">Should the record be deleted? This action can\'t be reversed.</string>
    <string name="steps_details_dialog_delete_confirm">Confirm</string>
    <string name="steps_details_dialog_delete_cancel">Cancel</string>
    <string name="steps_merge_header_create">Create</string>
    <string name="steps_merge_header_update">Edit</string>
    <string name="steps_merge_title_stepcount">Steps</string>
    <string name="steps_merge_title_goal">Goal</string>
    <string name="steps_merge_error_stepcount">The entered value is invalid.</string>
    <string name="steps_merge_error_Goal">The entered value is invalid.</string>
    <string name="steps_merge_information_loading_failed">The record could not been loaded, because an error occured.</string>
    <string name="steps_merge_title_DateTime">Date &amp; Time</string>
    <string name="steps_merge_button_now">Now</string>
    <string name="steps_merge_button_create">Save</string>
    <string name="steps_merge_button_update">Update</string>
    <string name="steps_merge_notifications_creation_failed">Record could not been created.</string>
    <string name="steps_merge_notifications_update_failed">Record could not been updated.</string>
    <string name="bloodpressure_list_actions_create">Add</string>
    <string name="bloodpressure_list_actions_reset">Delete all</string>
    <string name="bloodpressure_list_notifications_delete_success">Deleted records successfully.</string>
    <string name="bloodpressure_list_notifications_delete_failure">Failed to delete records.</string>
    <string name="bloodpressure_list_dialog_delete_title">Delete blood pressure records?</string>
    <string name="bloodpressure_list_dialog_delete_message">Should all blood pressure records be deleted? This action can\'t be reversed.</string>
    <string name="bloodpressure_list_dialog_delete_confirm">Confirm</string>
    <string name="bloodpressure_list_dialog_delete_cancel">Cancel</string>
    <string name="bloodpressure_details_actions_edit">Edit</string>
    <string name="bloodpressure_details_actions_delete">Delete</string>
    <string name="bloodpressure_details_header">Details</string>
    <string name="bloodpressure_details_title_systolic">Systolic</string>
    <string name="bloodpressure_details_title_diastolic">Diastolic</string>
    <string name="bloodpressure_details_title_pulse">Pulse</string>
    <string name="bloodpressure_details_title_medication">Medication</string>
    <string name="bloodpressure_details_title_created">Created</string>
    <string name="bloodpressure_details_title_note">Note</string>
    <string name="bloodpressure_details_warning_concerted">(Converted)</string>
    <string name="bloodpressure_details_notifications_delete_failure">Failed to delete record due to an error.</string>
    <string name="bloodpressure_details_dialog_delete_title">Delete record?</string>
    <string name="bloodpressure_details_dialog_delete_message">Should the record be deleted? This action can\'t be reversed.</string>
    <string name="bloodpressure_details_dialog_delete_confirm">Confirm</string>
    <string name="bloodpressure_details_dialog_delete_cancel">Cancel</string>
    <string name="bloodpressure_merge_header_create">Add</string>
    <string name="bloodpressure_merge_header_update">Edit</string>
    <string name="bloodpressure_merge_button_now">Now</string>
    <string name="bloodpressure_merge_button_create">Save</string>
    <string name="bloodpressure_merge_title_systolic">Systolic</string>
    <string name="bloodpressure_merge_title_diastolic">Diastolic</string>
    <string name="bloodpressure_merge_title_unit">Unit</string>
    <string name="bloodpressure_merge_title_pulse">Pulse</string>
    <string name="bloodpressure_merge_title_medication">Medication</string>
    <string name="bloodpressure_merge_title_note">Note</string>
    <string name="bloodpressure_merge_error_systolic_value_invalid">The entered systolic value is invalid.</string>
    <string name="bloodpressure_merge_error_diastolic_value_invalid">The entered diastolic value is invalid.</string>
    <string name="bloodpressure_merge_error_pulse_value_invalid">The entered pulse value is invalid.</string>
    <string name="bloodpressure_merge_information_loading_failed">Failed to load record.</string>
    <string name="settings_general_header">General</string>
    <string name="settings_theme_title">Design</string>
    <string name="settings_widgets_header">Widgets</string>
    <string name="settings_widgets_summary">Disable widgets you don\'t use.</string>
    <string name="settings_widgets_stepcounter">Step Counter</string>
    <string name="settings_widgets_weight">Weight</string>
    <string name="settings_widgets_food">Food</string>
    <string name="settings_widgets_bloodpressure">Blood Pressure</string>
    <string name="settings_widgets_bloodsugar">Blood Sugar</string>
    <string name="settings_units_header">Units</string>
    <string name="settings_units_energy">Energy</string>
    <string name="settings_units_mass">Mass</string>
    <string name="settings_units_bloodpressure">Blood Pressure</string>
    <string name="settings_units_bloodsugar">Blood Sugar</string>
    <string name="settings_user_data_header">User Data</string>
    <string name="settings_user_data_export_button">Export</string>
    <string name="settings_user_data_delete_button">Delete</string>
</resources>