<?xml version="1.0" encoding="utf-8"?>
<!--
    Health Track
    Copyright (C) 2022  Dominik Viererbe

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as
    published by the Free Software Foundation, either version 3 of the
    License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:id="@+id/nav_group1" android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_food"
                android:icon="@drawable/ic_menu_food"
                android:title="@string/menu_food"/>
        <item
                android:id="@+id/nav_weight"
                android:icon="@drawable/ic_menu_weight"
                android:title="@string/menu_weight"/>
        <item
                android:id="@+id/nav_stepcounter"
                android:icon="@drawable/ic_menu_stepcounter"
                android:title="@string/menu_stepcounter"/>
        <item
                android:id="@+id/nav_bloodpressure"
                android:icon="@drawable/ic_menu_bloodpressure"
                android:title="@string/menu_bloodpressure"/>
        <item
                android:id="@+id/nav_bloodsugar"
                android:icon="@drawable/ic_menu_bloodsugar"
                android:title="@string/menu_bloodsugar"/>
    </group>
    <group android:id="@+id/nav_group2" android:checkableBehavior="single">
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings"
                android:checkable="false"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about"/>
        <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/menu_send_feedback"
                android:checkable="false" />
    </group>
</menu>